# cardstock

./: .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  index.html  main.css
.github/workflows/: deploy.yml
data/: elections.json  teams.json
src/: main.rs
src/entities/: idol.rs  mod.rs  player.rs  team.rs
src/routes/: index.rs  mod.rs  player.rs  season.rs
templates/: base.html  home.html  index.html  player.html  season.html
