[package]
name = "cardstock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = "0.11"
either = { version = "1.6.1", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
#reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0-rc.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sled = { version = "0.34.7", features = ["compression"] }
time = { version = "0.3", features = ["serde"] }